api/krakend/k8s/overlays/development/patches/ingress.yaml
---
# krakend/k8s/overlays/development/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krakend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: api.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: krakend
            port:
              name: http
